fixed layout issues

--- a/index.css
+++ b/index.css
@@ -7,14 +7,6 @@ p {
 	font-size: 1.6rem;
 }
 
-.content-area {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-}
-
 nav {
 	padding: 1.5rem 0;
 	display: flex;
@@ -76,7 +68,7 @@ section#banner div.info p.always-open {
 }
 
 section#learn {
-	width: 100%;
+	width: 98%;
 	padding: 1% 1%;
 	background-color: #DDB9A3;
 	text-align: center;
